Fix button margin on Firefox 52

--- a/src/skin/popup.css
+++ b/src/skin/popup.css
@@ -304,7 +304,7 @@ button {
     font-size: 12px;
     font-weight: bold;
     line-height: 16px;
-    margin-top: 2%;
+    margin-top: 8px;
     padding: 10px;
     text-align: center;
     width: 49%;
